# armada

./: .gitignore  CLAUDE.md  alembic.ini  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 20260412-1149-0ca1db7e6f52-create_users_and_sessions_tables.py  20260412-1425-aa01d4094637-create_users_and_sessions_tables.py  20260412-1440-f8777e71024b-create_users_and_user_sessions_tables.py  20260414-1638-369e23305aad-add_is_superuser_to_users.py  20260414-1754-9f015392d05c-add_products_and_product_guns_tables.py  20260416-1103-58001c64889f-add_product_images_table.py
armada/: config.py  database.py  main.py
armada/auth/: dependencies.py
armada/db/: __init__.py  base.py  session.py
armada/managers/: products.py  users.py
armada/models/: products.py  users.py
armada/modules/users/: __init__.py  manager.py  models.py  router.py  types.py
armada/routers/: products.py  users.py
armada/types/: products.py  users.py
data/: guns.csv
facility/: .gitignore  README.md  start.sh
facility/app/: __init__.py  import_data.py  main.py
facility/static/: app.js  index.html  styles.css
frontend/: index.html  login.html  products.html  services.html  signup.html
runbooks/: bootstrap.py  client.py  products.py  seed_products.py  set_token.sh  users.py
scripts/: alembic_bounce.sh  docker-compose.yml  reset_db.sh  setup_server.sh  start.sh
